implement rest of the sample
